--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -28,7 +28,7 @@
         <div class = "container setup">
             <div class = "setup-div">
                 <div class = "logo">WARD</div>
-                <div class = "logo-description">SERVER DASHBOARD</div>
+                <div class = "logo-description">服务器仪表盘</div>
                 <div class = "clouds">
                     <img class = "first" th:src = @{/img/logo/clouds/left.png} />
                     <img class = "second" th:src = @{/img/logo/clouds/right.png} />
@@ -40,12 +40,12 @@
                         <div class = "second"></div>
                         <div class = "third"></div>
                     </div>
-                    <div class = "label-main-settings">MAIN SETTINGS</div>
+                    <div class = "label-main-settings">主要设置</div>
                     <div class = "main-settings">
                         <input id = "server-name" type = "text" maxlength = "10" placeholder = "Server Name" />
                         <div class = "main-settings-underline first"></div>
                     </div>
-                    <div class = "label-additional-settings">ADDITIONAL SETTINGS</div>
+                    <div class = "label-additional-settings">其他设置</div>
                     <div class = "additional-settings">
                         <div class = "button-squares-grid">
                             <div id = "light-theme-square" class = "first"></div>
