--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
                         <div class = "header">
                             <div class = "hw-logo first"></div>
                             <div class = "label-hw-info">
-                                <div class = "hw-type">Processor</div>
+                                <div class = "hw-type">处理器</div>
                                 <div class = "hw-name" th:text = "${info.processor.name}"></div>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class = "usage-postfix">%</div>
                                 </div>
-                                <p class = "info-label">PROCESSOR USAGE</p>
+                                <p class = "info-label">CPU使用</p>
                                 <div class = "usage-underline first"></div>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                         <div class = "header">
                             <div class = "hw-logo second"></div>
                             <div class = "label-hw-info">
-                                <div class = "hw-type">Machine</div>
+                                <div class = "hw-type">内存</div>
                                 <div class = "hw-name" th:text = "${info.machine.operatingSystem}"></div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                     </div>
                                     <div class = "usage-postfix">%</div>
                                 </div>
-                                <p class = "info-label">RAM USAGE</p>
+                                <p class = "info-label">内存使用</p>
                                 <div class = "usage-underline second"></div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                         <div class = "header">
                             <div class = "hw-logo third"></div>
                             <div class = "label-hw-info">
-                                <div class = "hw-type">Storage</div>
+                                <div class = "hw-type">硬盘</div>
                                 <div class = "hw-name" th:text = "${info.storage.mainStorage}"></div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                     </div>
                                     <div class = "usage-postfix">%</div>
                                 </div>
-                                <div class = "info-label">STORAGE USAGE</div>
+                                <div class = "info-label">存储使用</div>
                                 <div class = "usage-underline third"></div>
                             </div>
                         </div>
@@ -192,23 +192,23 @@
                         </div>
                         <div class = "pages">
                             <div id = "logo-page" class = "first">
-                                <div class = "logo">WARD</div>
-                                <div class = "logo-description">SERVER DASHBOARD</div>
+                                <div class = "logo">仪表盘</div>
+                                <div class = "logo-description"></div>
                             </div>
                             <div id = "contacts-page" class = "second">
-                                <div class = "contacts-label">CONTACTS</div>
+                                <div class = "contacts-label"></div>
                                 <div class = "contacts-description">
-                                    <div class = "first">Feel free to ask questions and leave feedback</div>
-                                    <div class = "second">You can also text author in Telegram</div>
+                                    <div class = "first"></div>
+                                    <div class = "second"></div>
                                 </div>
-                                <div class = "contacts-links">
-                                    <a href = "https://github.com/B-Software/Ward">
+                                <!--<div class = "contacts-links">
+                                    <a href = "https://zsmiao.xyz">
                                         <img class = "first" th:src = @{/img/links/github.png} />
                                     </a>
-                                    <a href = "https://t.me/Rudolf_Barbu">
+                                    <a href = "https://t.me/zsmiao">
                                         <img class = "second" th:src = @{/img/links/telegram.png} />
                                     </a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class = "clouds">
@@ -230,10 +230,10 @@
                                     <div><p id = "uptime-seconds" th:text = "${info.uptime.seconds}"></p></div>
                                 </div>
                                 <div class = "labels-grid">
-                                    <div>DAYS</div>
-                                    <div>HOURS</div>
-                                    <div>MINUTES</div>
-                                    <div>SECONDS</div>
+                                    <div>天</div>
+                                    <div>时</div>
+                                    <div>分</div>
+                                    <div>秒</div>
                                 </div>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                 </div>
                 <div class = "col-lg-12 col-xl-8 sm-hidden">
                     <div class = "card">
-                        <div class = "chart-label">% Utilization</div>
+                        <div class = "chart-label">利用率 %</div>
                         <div class = "chart-triangle-grid">
                             <div id = "processor-triangle" class = "first"></div>
                             <div id = "ram-triangle" class = "second"></div>
